--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,1 +1,3 @@
-<h1>Hello World from component</h1>
+<div class="home-page">
+  <h1>Hello World from component {{ $ctrl.init }} - {{ $ctrl.message }}</h1>
+</div>
