--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -77,8 +77,7 @@ body {
     font-size: 13px;
     line-height: 23px;
     color: #666;
-    background: #111;
-    padding-top: 45px;
+    background: #111;;
     -webkit-font-smoothing: antialiased;
 }
 
