feat(app-components): Added new UI Components for the home page
BREAKING CHANGE: Needs tests

--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="home-page">
-  <h1>Hello World from component {{ $ctrl.init }} - {{ $ctrl.message }}</h1>
+  <tt-jumbotron-component></tt-jumbotron-component>
+
+  <tt-tutor-listings-section></tt-tutor-listings-section>
 </div>
