refactor(app): Update App to handle home component and sub components
BREAKING CHANGE: Need tests

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
-  <h1>Hello World</h1>
+<tt-header-component></tt-header-component>
 
+<tt-full-width-layout>
   <ui-view></ui-view>
-</div>
+</tt-full-width-layout>
+
