feat(tutor-card): First iteration of the tutor card component

--- a/src/client/app/shared/component-tutor-lists/tutor-lists.component.html
+++ b/src/client/app/shared/component-tutor-lists/tutor-lists.component.html
@@ -1,3 +1,6 @@
-<div ng-repeat="tutor in $ctrl.tutors">
-  {{ tutor.name }}
+<div class="row">
+  <tt-tutor-card-component
+    ng-repeat="tutor in $ctrl.tutors" 
+    tutor="tutor"
+  ></tt-tutor-card-component>
 </div>
