--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -48,3 +48,35 @@
     -1px 1px 0 #000,
     1px 1px 0 #000;  
 }
+
+.text-center {
+    text-align: center;
+}
+
+.round {
+    border-radius: 50px;
+}
+
+.border-all-grey {
+    border: 1px solid grey;
+}
+
+.margin-all-10 {
+    margin: 10px;
+}
+
+.padding-all-10 {
+    padding: 10px;
+}
+
+.inline{
+    display: inline;
+}
+
+// Specific component styling
+.tutor-card {
+    .row {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
