fix(header-component): UI-sref home component

--- a/src/client/app/shared/component-header/header.component.html
+++ b/src/client/app/shared/component-header/header.component.html
@@ -2,13 +2,13 @@
 <nav class="navbar navbar-inverse">
   <tt-full-width-layout>
     <div class="navbar-header">
-      <a href="#" class="navbar-brand text-info padding-none-left">
+      <a ui-sref="home" class="navbar-brand text-info padding-none-left">
         Tutor Track
       </a>
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="">
+          <a ui-sref="home">
             View Your Tutor Schedule
           </a>
         </li>
