chore(index-style): Added new files and new styles

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -65,12 +65,33 @@
     margin: 10px;
 }
 
+.margin-auto {
+    margin: auto;
+}
+
 .padding-all-10 {
     padding: 10px;
 }
 
 .inline{
     display: inline;
+}
+
+
+.w100 {
+    width: 100px;
+}
+
+.w150 {
+    width: 150px;
+}
+
+.w300 {
+    width: 300px;
+}
+
+.block {
+    display: block;
 }
 
 // Specific component styling
