refactor(modal-component): Update modal component's binding to have a modal id to prevent modal clas

--- a/src/client/app/shared/component-modal/modal.component.html
+++ b/src/client/app/shared/component-modal/modal.component.html
@@ -1,10 +1,9 @@
 <div 
   class="modal fade"
-  id="myModal"
+  id="{{ $ctrl.modalId }}"
   tabindex="-1"
   role="dialog"
-  aria-labelledby="myModalLabel"
-  ng-if="$ctrl.isOpen">
+  aria-labelledby="myModalLabel">
   <div
     class="modal-dialog"
     role="document">
