refactor(signup-button): Changed the binding to have static values
This is done because the value will only be used in that component and it's children

--- a/src/client/app/shared/button-signup/signup-button.component.html
+++ b/src/client/app/shared/button-signup/signup-button.component.html
@@ -1,9 +1,14 @@
 <div class="js-signup-button">
-  <button class="btn btn-primary">Sign up!</button>
+  <button 
+    class="btn btn-primary"
+    data-toggle="modal"
+    data-target="#{{$ctrl.modalId}}">
+    Sign up!
+  </button>
 
   <tt-modal-component
-    title="$ctrl.title"
-    is-open="$ctrl.showModal">
+    title="$ctrl.modalTitle"
+    modal-id="$ctrl.modalId">
     <tt-signup-component></tt-signup-component>
   </tt-modal-component>
 </div>
